--- a/expert_connect/templates/registration/login.html
+++ b/expert_connect/templates/registration/login.html
@@ -1,10 +1,18 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <h2>Login</h2>
+
+{% if form.errors %}
+<div style="color: red; margin-bottom: 1rem">
+  <p>Your username and password didn't match. Please try again.</p>
+</div>
+{% endif %}
+
 <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Login</button>
 </form>
+
+<p style="margin-top: 1rem">
+  <a href="{% url 'register' %}">Don't have an account? Register here</a>
+</p>
 {% endblock %}
