--- a/expert_connect/templates/registration/register.html
+++ b/expert_connect/templates/registration/register.html
@@ -1,10 +1,19 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <h2>Register</h2>
+
+{% if form.errors %}
+<div style="color: red; margin-bottom: 1rem">
+  <p>Please correct the errors below:</p>
+  {{ form.errors }}
+</div>
+{% endif %}
+
 <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Register</button>
 </form>
+
+<p style="margin-top: 1rem">
+  <a href="{% url 'login' %}">Already have an account? Login here</a>
+</p>
 {% endblock %}
