--- a/expert_connect/templates/create_profile.html
+++ b/expert_connect/templates/create_profile.html
@@ -2,6 +2,14 @@
 <div class="create-profile-container">
   <h2>Create Your Profile</h2>
 
+  <div class="approval-notice">
+    <p>
+      <strong>Important:</strong> Your profile will be reviewed by an
+      administrator before it becomes visible to other users. You will be
+      notified once it's approved.
+    </p>
+  </div>
+
   <form method="post" enctype="multipart/form-data" class="profile-form">
     {% csrf_token %}
 
@@ -46,7 +54,7 @@
     </div>
     {% endif %}
 
-    <button type="submit" class="btn btn-primary">Save Profile</button>
+    <button type="submit" class="btn btn-primary">Submit for Approval</button>
   </form>
 </div>
 
@@ -63,8 +71,22 @@
   .create-profile-container h2 {
     text-align: center;
     color: #2c3e50;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 2rem;
+  }
+
+  .approval-notice {
+    background: #fff3cd;
+    border: 1px solid #ffeaa7;
+    border-radius: 5px;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    color: #856404;
+  }
+
+  .approval-notice p {
+    margin: 0;
+    font-size: 0.95rem;
   }
 
   .profile-form {
