Set max-height of 600px for featured expert and podcast cards in home page

--- a/expert_connect/templates/home.html
+++ b/expert_connect/templates/home.html
@@ -206,6 +206,7 @@
     flex-direction: column;
     gap: 1rem;
     overflow: hidden;
+    max-height: 600px;
   }
 
   .card-image {
@@ -438,6 +439,7 @@
       padding: 1.25rem;
       flex-direction: row;
       text-align: left;
+      max-height: 600px;
     }
 
     .card-image {
@@ -513,6 +515,7 @@
 
     .featured-card {
       padding: 1.5rem;
+      max-height: 600px;
     }
 
     .card-image {
@@ -572,6 +575,7 @@
     .featured-card {
       padding: 1rem;
       min-width: 0;
+      max-height: 600px;
     }
 
     .card-image {
@@ -607,6 +611,7 @@
 
     .featured-card {
       padding: 1.25rem;
+      max-height: 600px;
     }
 
     .card-image {
